testdata/baselines/reference/submodule/conformance/callbackTagVariadicType.errors.txt
callbackTagVariadicType.js(7,12): error TS2304: Cannot find name 'Foo'.


==== callbackTagVariadicType.js (1 errors) ====
    /**
     * @callback Foo
     * @param {...string} args
     * @returns {number}
     */
    
    /** @type {Foo} */
               ~~~
!!! error TS2304: Cannot find name 'Foo'.
    export const x = () => 1
    var res = x('a', 'b')
    